--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "groq-sdk": "^0.3.0"
   },
   "devDependencies": {
-    "typescript": "5.3.0",
-    "@types/react": "18.3.0",
+"typescript": "^5"    "@types/react": "18.3.0",
     "@types/node": "20.11.0",
     "tailwindcss": "3.4.0",
     "postcss": "8.4.0",
